--- a/index.html
+++ b/index.html
@@ -14,13 +14,24 @@
             <div class="nav-wrapper">
               <a href="#" class="brand-logo center">GitHub Finder</a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
-               
               </ul>
             </div>
           </nav>
-<h1>Hello</h1>
+
+
+<div class="container">
+    <h3>Search Github Users</h3>
+    <p>Search any github profile here to get their info and repos</p>
+    <input type="text" id='searchUser' placeholder="Search here">
+    <br>
+    <div id="profile"></div>
+</div>
+
+
       <!--JavaScript at end of body for optimized loading-->
-      <script type="text/javascript" src="js/materialize.min.js"></script>
+      <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+      <script src="app.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     </body>
   </html>
         
