--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           </nav>
 
 
-<div class="container">
+<div class="container center">
     <h3>Search Github Users</h3>
     <p>Search any github profile here to get their info and repos</p>
     <input type="text" id='searchUser' placeholder="Search here">
