--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-<title>JQuery AJAX</title>
+<title>GitHub Users</title>
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <body>
-        <nav>
+        <nav class="purple">
             <div class="nav-wrapper">
-              <a href="#" class="brand-logo center">GitHub Finder</a>
+              <a href="#" class="brand-logo center">GitHub User</a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
               </ul>
             </div>
@@ -21,7 +21,7 @@
 
 <div class="container center">
     <h3>Search Github Users</h3>
-    <p>Search any github profile here to get their info and repos</p>
+    <p class="grey-text lighten-3">Search any github profile here to get their info and repos</p>
     <input type="text" id='searchUser' placeholder="Search here">
     <br>
     <div id="profile"></div>
